--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,96 @@
-.App {
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+.table {
+  border-radius: 1rem;
+  border: none;
+  box-shadow: 0 0 10px 1px rgb(223, 223, 223);
+  margin-bottom: 4rem;
+  overflow: hidden;
+}
+
+thead {
+  border-bottom: 2px solid rgb(105, 0, 105);
+}
+
+thead tr{
+  cursor: default;
+}
+
+tbody tr{
+  cursor: pointer;
+}
+
+.header {
+  text-align: center;
+  color: white;
+  background-image: linear-gradient(45deg, rgb(116, 8, 116), rgb(194, 0, 194));
+}
+
+.jumbotron {
+  border-radius: 0;
+  margin-bottom: 0;
+}
+.header h1 {
+  font-size: 3.5rem;
+}
+
+.header h3 {
+  font-weight: 50;
+}
+
+.logo {
+  filter: brightness(350%);
+}
+
+footer {
+  padding: 2rem 0;
+  background-color: rgba(194, 0, 194,0.25);
+  font-size: 1.3rem;
+  font-weight: 100;
+  color: rgb(66, 0, 66);
+  margin-bottom: 0;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+footer p {
+  font-size: 1.2rem;
+  margin-bottom: 0.4rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.footer-icons a {
+  font-size: 1.5rem;
+  color: rgba(66, 0, 66,0.6);
+  margin: 0 4px
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+.footer-icons a:hover {
+  color: rgb(66, 0, 66);
+}
+
+.home-button {
+  cursor: pointer;
   flex-direction: column;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  color: rgb(105, 0, 105);
+  border: solid 2px rgba(105, 0, 105,0.5);
+  margin: 2rem auto;
+  border-radius: 0.7rem;
+  height: 400px;
+  max-width: 400px;
+  transition: background-color 0.2s ease-out;
+}
+
+
+.home-button:hover {
+  background-color: rgb(156, 0, 156);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
